--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -7,22 +7,23 @@
     tools:context=".ui.main.MainActivity">
 
     <Button
+        android:id="@+id/bt_login"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
-        android:onClick="onRepeat"
-        android:text="repeat_click"
+        android:onClick="onLogin"
+        android:text="Login"
         android:textAllCaps="false" />
 
     <Button
+        android:id="@+id/bt_logout"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
-        android:onClick="enterAccountSDK"
-        android:text="帐号SDK"
+        android:onClick="onLogout"
+        android:text="Logout"
         android:textAllCaps="false" />
-
 
 </androidx.appcompat.widget.LinearLayoutCompat>
