--- a/app/src/main/res/layout/activity_login1.xml
+++ b/app/src/main/res/layout/activity_login1.xml
@@ -6,23 +6,18 @@
     android:orientation="vertical"
     tools:context=".ui.main.MainActivity">
 
+    <WebView
+        android:id="@+id/wv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="4" />
+
     <Button
+        android:id="@+id/bt"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
-        android:onClick="onRepeat"
-        android:text="repeat_click"
-        android:textAllCaps="false" />
-
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:onClick="enterAccountSDK"
-        android:text="帐号SDK"
-        android:textAllCaps="false" />
-
+        android:text="loop" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
