--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,25 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.main.MainActivity">
+    tools:context=".MainActivity">
 
     <Button
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
-        android:onClick="onRepeat"
         android:text="repeat_click"
         android:textAllCaps="false" />
-
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:onClick="enterAccountSDK"
-        android:text="帐号SDK"
-        android:textAllCaps="false" />
-
 
 </androidx.appcompat.widget.LinearLayoutCompat>
